k8s/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-backend
  template:
    metadata:
      labels:
        app: eshop-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/mdansevicius/sairen-atelier/backend:dev-39886b648b47
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
