k8s/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-frontend
  template:
    metadata:
      labels:
        app: eshop-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/mdansevicius/sairen-atelier/frontend:dev-366eb4a81915
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
