k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-frontend
spec:
  selector:
    app: eshop-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
